;; dune file

(library
   (name WejayTest)
   (public_name wejay-test.lib)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries rely.lib wejay.lib)
   (modules (:standard \ RunTests))
)
(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package wejay-test)
  (name RunTests)
  (public_name RunTests.exe)
  (libraries
    wejay-test.lib
  )
  (modules RunTests)
)
